grammar.js
    word: ($) => $.identifier,

    rules: {
        spec: ($) => repeat($._statements),

        _statements: ($) =>
            choice($._simple_statements, $._compound_statements),

        comment: ($) =>
            token(choice(seq('#', ANYTHING), seq('%dnl ', ANYTHING))),

        identifier: (_) =>
            /(\p{XID_Start}|\$|_|\\u[0-9A-Fa-f]{4}|\\U[0-9A-Fa-f]{8})(\p{XID_Continue}|\$|\\u[0-9A-Fa-f]{4}|\\U[0-9A-Fa-f]{8})*/,

        ///////////////////////////////////////////////////////////////////////
        // Literals
        ///////////////////////////////////////////////////////////////////////

        _literal: ($) => choice($.concatenation, $._primary_expression),

        _primary_expression: ($) =>
            prec(
                1,
                choice(
                    $.word,
                    $.quoted_string,
                    $.integer,
                    $.float,
                    $.version,
                    $.parenthesized_expression,
                    $.macro_simple_expansion,
                    $.macro_expansion,
                    $.macro_integer_expansion,
                    $.macro_shell_expansion
                )
            ),

        // 0%{?<name>}
        // TODO FIXME Can we integrate this in macro_(simple_)expansion??
        macro_simple_expansion: ($) =>
            seq(
                '%',
                choice(
                    seq(
                        optional(field('operator', token.immediate('!'))),
                        choice(
                            $.macro_builtin,
                            alias($.macro_name, $.identifier)
                        )
                    ),
                    $.conditional_expansion,
                    $._special_macro_name
                )
            ),

        // %*, %**, %#, %<num>
        _special_macro_name: ($) =>
            alias(
                choice('*', '**', '#', /[0-9]+/, 'nil'),
                $.special_variable_name
            ),

        // Builtin macro names
        macro_builtin: ($) =>
            choice(
                $.macro_source,
                $.macro_patch,
                'basename',
                'dirname',
                'dnl',
                'dump',
                'echo',
                'error',
                'exists',
                'expand',
                'expr',
                'getdirconf',
                'getenv',
                'getncpus',
                'gsub',
                'len',
                'load',
                'lower',
                'lua',
                'macrobody',
                'quote',
                'rep',
                'reverse',
                'rpmversion',
                'shrink',
                'sub',
                'suffix',
                'trace',
                'u2p',
                'shescape',
                'uncompress',
                'upper',
                'url2path',
                'verbose',
                'warn'
            ),

        macro_expansion: ($) =>
            seq('%{', optional($._macro_expansion_body), '}'),

        _macro_expansion_body: ($) =>
            choice(
                // %{<name>}
                seq(
                    optional(field('operator', token.immediate('!'))),
                    choice(
                        $.macro_builtin,
                        alias($.macro_name, $.identifier),
                        $._special_macro_name
                    ),
                    optional(seq(optional(':'), $.string))
                ),
                // %{<name> <argument>}
                seq(
                    alias($.macro_name, $.identifier),
                    repeat1(field('argument', $._literal))
                ),
                // %{?<name>:<consequence>}
                $.conditional_expansion
            ),

        //// Conditionally Expanded Macros
        //
        // %{?macro_name:value}
        // %{!?macro_name:value}
        // %{?macro_name}
        // %{!?macro_name}
        //
        conditional_expansion: ($) =>
            prec.left(
                1,
                seq(
                    optional(field('operator', token.immediate('!'))),
                    '?',
                    field('condition', alias($.macro_name, $.identifier)),
                    optional(
                        seq(
                            ':',
                            field(
                                'consequence',
                                choice(
                                    alias(
                                        $._macro_definition,
                                        $.macro_definition
                                    ),
                                    $.macro_undefinition,
                                    $.macro_simple_expansion,
                                    $.macro_expansion,
                                    $.text
                                )
                            )
                        )
                    )
                )
            ),

        //// Macro Definition
        //
        // %define <name>[(opts)] <body>
        macro_definition: ($) =>
            seq($._macro_definition, token.immediate(NEWLINE)),

        _macro_definition: ($) =>
            prec.left(
                seq(
                    '%',
                    alias($.macro_define, $.macro_builtin),
                    token.immediate(BLANK),
                    field('name', alias($.macro_name, $.identifier)),
                    optional(seq('(', optional($.macro_options), ')')),
                    token.immediate(BLANK),
                    field('value', $._body)
                )
            ),

        macro_undefinition: ($) =>
            prec.left(
                seq(
                    '%',
                    alias($.macro_undefine, $.macro_builtin),
                    token.immediate(BLANK),
                    field('name', alias($.macro_name, $.identifier))
                )
            ),

        //// Macro call
        //
        // %setup -q
        //
        macro_call: ($) =>
            prec.left(
                seq(
                    field('name', $.macro_simple_expansion),
                    repeat(field('argument', $._literal)),
                    NEWLINE
                )
            ),

        macro_shell_expansion: ($) =>
            choice(
                seq('%(', ')'),
                seq(
                    '%(',
                    repeat1(
                        choice(
                            prec(1, $.macro_expansion),
                            $.quoted_string,
                            $.string
                        )
                    ),
                    ')'
                )
            ),

        ///////////////////////////////////////////////////////////////////////
        // Conditionals (%if, %ifarch, %ifos)
        ///////////////////////////////////////////////////////////////////////

        comparison_operator: ($) =>
            prec.left(
                PREC.compare,
                seq(
                    $._primary_expression,
                    repeat1(
                        seq(
                            field(
                                'operators',
                                choice('<', '<=', '==', '!=', '>=', '>')
                            ),
                            $._primary_expression
                        )
                    )
                )
            ),

        preamble: ($) => seq($.tags),

        // Name:   tree-sitter-rpmspec
        // Requires(pre): tree-sitter
        // Summary: A parser generator Tool
        tags: ($) =>
            seq(
                choice($.tag, $.dependency_tag),
                token.immediate(/:( |\t)*/),
                field('value', $._literal),
                token.immediate(NEWLINE)
            ),

        dependency_tag: ($) =>
            choice(
                seq('Requires', optional(seq('(', $.qualifier, ')'))),
                'BuildArch',
                'BuildArchitectures',
                'BuildConflicts',
                'BuildPrereq',
                'BuildRequires',
                'Conflicts',
                'DocDir',
                'Enhances',
                'ExcludeArch',
                'ExcludeOS',
                'ExclusiveArch',
                'ExclusiveOS',
                'Obsoletes',
                'OrderWithRequires',
                'Prefix',
                'Prefixes',
                'Prereq',
                'Provides',
                'Recommends',
                'RemovePathPostfixes',
                'Suggests',
                'Supplements'
            ),

        ///////////////////////////////////////////////////////////////////////
        // Description Section (%description)
        ///////////////////////////////////////////////////////////////////////

        integer: ($) => token(/-?(0x)?[0-9]+(#[0-9A-Za-z@_]+)?/),

        version: ($) => {
            const digits = repeat1(/[0-9]+_?/);

            return token(
                seq(digits, '.', digits, optional(/[a-zA-Z0-9+._-~]+/))
            );
        },

        text: ($) =>
            prec(
                -1,
                repeat1(
                    seq(
                        choice(
                            seq(optional('%'), $.text_content),
                            $.macro_simple_expansion,
                            $.macro_expansion
                        )
                    )
                )
            ),

        text_content: (_) => token(prec(-1, /([^"%\\\r\n]|\\(.|\r?\n))+/)),

        string: ($) =>
            prec.left(
                repeat1(
                    choice(
                        seq(optional('%'), $.string_content),
                        $.macro_simple_expansion,
                        $.macro_expansion
                    )
                )
            ),

        string_content: (_) => token(prec(-1, /([^%\\\r\n])+/)),

        quoted_string: ($) =>
            seq(
                '"',
                repeat(choice($.macro_expansion, $.quoted_string_content)),
                '"'
            ),

        quoted_string_content: (_) => token(prec(-1, /([^"%\\\r\n])+/)),

        word: ($) => token(/([^\s"#%{}()\\])+/),

        concatenation: ($) =>
            prec(
                -1,
                seq($._primary_expression, repeat1($._primary_expression))
            ),
    },
});

/**
 * Creates a rule to match one or more occurrences of `rule` separated by `sep`
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @return {SeqRule}
 *
 */
function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}
