test/corpus/macro_expansion.txt
===============================================================================
Macros (%define)
===============================================================================

%define foo bar

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (word)))

===============================================================================
Macros (%global)
===============================================================================

%global foo bar

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (word)))

===============================================================================
Macros (%global positive integer)
===============================================================================

%global foo 1

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (integer)))

===============================================================================
Macros (%global negative integer)
===============================================================================

%global foo -1

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (integer)))

===============================================================================
Macros (%global hex)
===============================================================================

%global foo 0x20

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (integer)))

===============================================================================
Macros (%global function with empty arguments)
===============================================================================

%global foo() bar

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (word)))

===============================================================================
Macros (%global with quoted string)
===============================================================================

%global foo "bar"

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (quoted_string
      (quoted_string_content))))

===============================================================================
Macros (%undefine)
===============================================================================

%undefine foo

-------------------------------------------------------------------------------

(spec
  (macro_undefinition
    (builtin)
    (identifier)))

===============================================================================
Macros (Usage/Braces)
===============================================================================

%{getncpus}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)))

===============================================================================
Macros (Shell Expansion)
:skip
===============================================================================

%(echo "wurst")

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion
    (string
      (string_content))
    (quoted_string
      (string_content))))

===============================================================================
Macros (Empty Shell Expansion)
:skip
===============================================================================

%()

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion))

===============================================================================
Macros (Conditional macro defintion #1)
===============================================================================

%{!?_make_verbose:%define _make_verbose V=1 VERBOSE=1}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (conditional_expansion
      (identifier)
      (macro_definition
        (builtin)
        (identifier)
        (word)
        (word)))))

===============================================================================
Macros (Conditional macro definition #2)
===============================================================================

%{!?gopath: %global gopath %{_datadir}/gocode}

# Comment

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (conditional_expansion
      (identifier)
      (macro_definition
        (builtin)
        (identifier)
        (macro_expansion
          (identifier))
        (word))))
  (comment))

===============================================================================
Macros (Complex arguments with quotes)
===============================================================================

%setup -q -n "package name with spaces"
%patch0 -p1 --fuzz=0 --backup="file.bak"

-------------------------------------------------------------------------------
(spec
  (setup_macro
    (builtin)
    (setup_flag)
    (setup_name_option
      (quoted_string
        (quoted_string_content))))
  (patch_macro
    (patch_legacy_token
      (builtin))
    (patch_number_option)
    (patch_long_option
      (integer))
    (patch_long_option
      (quoted_string
        (quoted_string_content)))))

===============================================================================
Macros (Arguments with escaping)
===============================================================================

%configure --enable-feature="value with \"quotes\""
%make_build CFLAGS="-DVERSION=\"%{version}\""

-------------------------------------------------------------------------------

(spec
  (macro_expansion_call
    (identifier)
    (word)
    (quoted_string
      (quoted_string_content)))
  (macro_expansion_call
    (identifier)
    (word)
    (quoted_string
      (quoted_string_content)
      (macro_expansion
        (identifier))
      (quoted_string_content))))

===============================================================================
Macros (Nested macro arguments)
===============================================================================

%{expand: %{configure %{configure_args}}}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    (macro_expansion
      (identifier)
      (macro_expansion
        (identifier)))))

===============================================================================
Macros (Function-style Built-in with Colon)
===============================================================================

%{basename:/path/to/file.txt}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    (word)))

===============================================================================
Macros (Environment Variable Expansion)
===============================================================================

%{getenv:HOME}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    (word)))

===============================================================================
Macros (String Transformation Functions)
===============================================================================

%{upper:hello world}
%{lower:HELLO WORLD}
%{shrink:  extra   spaces  }

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    (word)
    (word))
  (macro_expansion
    (builtin)
    (word)
    (word))
  (macro_expansion
    (builtin)
    (concatenation
      (word)
      (word))))

===============================================================================
Macros (Path Operations)
===============================================================================

%{dirname:/usr/local/bin/program}
%{basename:/usr/local/bin/program}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    (word))
  (macro_expansion
    (builtin)
    (word)))

===============================================================================
Macros (Nested Function Calls)
===============================================================================

%{upper:%{basename:/path/to/FILE.txt}}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    (macro_expansion
      (builtin)
      (word))))

===============================================================================
Macros (Complex Lua with Variables)
:skip
===============================================================================

%{lua:
local name = rpm.expand("%{name}")
print("Package: " .. name)
}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    (text
      (text_content)
      (macro_expansion
        (identifier))
      (text_content))))

===============================================================================
Macros (Python Provide and Obsoletes)
===============================================================================

%{?python_provide:%python_provide python3-package}
Obsoletes: python3-oldpackage < 0:1.1

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (conditional_expansion
      (identifier)
      (macro_expansion_call
        (identifier)
        (word))))
  (preamble
    (tags
      (dependency_tag)
      (comparison_operator
        (word)
        (version)))))
