test/corpus/macro_shell_expansion.txt
===============================================================================
Macro Shell Expansion (Empty)
===============================================================================

%()

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion))

===============================================================================
Macro Shell Expansion (Simple Command)
===============================================================================

%(echo "wurst")

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion
    (shell_command
      (shell_code))))

===============================================================================
Macro Shell Expansion (Command with Pipes and Parentheses)
===============================================================================

%(echo aa-bb-cc | tr '-' '.')

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion
    (shell_command
      (shell_code))))

===============================================================================
Macro Shell Expansion (Command with Macro)
===============================================================================

%(echo %{name}-%{version})

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion
    (shell_command
      (shell_code)
      (macro_expansion
        (identifier))
      (shell_code)
      (macro_expansion
        (identifier)))))

===============================================================================
Macro Shell Expansion (Command with Nested Parentheses)
===============================================================================

%(test $(echo hello) = hello && echo success)

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion
    (shell_command
      (shell_code)
      (shell_code
        (shell_code))
      (shell_code))))

===============================================================================
Macro Shell Expansion (Complex Command with Multiple Macros)
===============================================================================

%(pkg-config --cflags %{name} | sed 's/-I/-isystem /g')

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion
    (shell_command
      (shell_code)
      (macro_expansion
        (identifier))
      (shell_code))))
