test/corpus/macro_simple_expansion.txt
===============================================================================
Simple Macro Expansion (Built-in macro without braces)
===============================================================================

%getncpus

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (macro_builtin))))

===============================================================================
Simple Macro Expansion (Custom macro with single argument)
===============================================================================

# Expansion
%bcond_without foo

# Just some comment

-------------------------------------------------------------------------------

(spec
  (comment)
  (macro_call
    (macro_simple_expansion
      (identifier))
    (word))
  (comment))

===============================================================================
Simple Macro Expansion (Custom macro with multiple arguments)
===============================================================================

# Expansion
%bcond foo 1

# Just some comment

-------------------------------------------------------------------------------

(spec
  (comment)
  (macro_call
    (macro_simple_expansion
      (identifier))
    (word)
    (integer))
  (comment))

===============================================================================
Simple Macro Expansion (Built-in macro dirname)
===============================================================================

%dirname

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (macro_builtin))))

===============================================================================
Simple Macro Expansion (Built-in macro upper)
===============================================================================

%upper

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (macro_builtin))))

===============================================================================
Simple Macro Expansion (Built-in macro lower)
===============================================================================

%lower

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (macro_builtin))))

===============================================================================
Simple Macro Expansion (Built-in macro getenv)
===============================================================================

%getenv

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (macro_builtin))))

===============================================================================
Simple Macro Expansion (Custom macro SOURCE0)
===============================================================================

%SOURCE0

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (identifier))))

===============================================================================
Simple Macro Expansion (Custom macro name)
===============================================================================

%name

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (identifier))))

===============================================================================
Simple Macro Expansion (Custom macro version)
===============================================================================

%version

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (identifier))))

===============================================================================
Simple Macro Expansion (Custom macro release)
===============================================================================

%release

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (identifier))))

===============================================================================
Simple Macro Expansion (Custom macro with underscore)
===============================================================================

%_bindir

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (identifier))))

===============================================================================
Simple Macro Expansion (Custom macro with numbers)
===============================================================================

%configure

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (identifier))))

===============================================================================
Simple Macro Expansion (Special variable all arguments)
===============================================================================

%*

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (special_variable_name))))

===============================================================================
Simple Macro Expansion (Special variable quoted arguments)
===============================================================================

%**

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (special_variable_name))))

===============================================================================
Simple Macro Expansion (Special variable argument count)
===============================================================================

%#

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (special_variable_name))))

===============================================================================
Simple Macro Expansion (Special variable positional argument)
===============================================================================

%1

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (special_variable_name))))

===============================================================================
Simple Macro Expansion (Special variable nil)
===============================================================================

%nil

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (special_variable_name))))

===============================================================================
Simple Macro Expansion (Negation operator with built-in)
===============================================================================

%!exists %{builddir}/myflag.txt

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (macro_builtin))
    (macro_expansion
      (identifier))
    (word)))

===============================================================================
Simple Macro Expansion (Negation operator with custom macro)
===============================================================================

%!debug

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (identifier))))
