test/corpus/macros.txt
===============================================================================
Macros (%define)
===============================================================================

%define foo bar

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (macro_builtin)
    (identifier)
    (word)))

===============================================================================
Macros (%global)
===============================================================================

%global foo bar

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (macro_builtin)
    (identifier)
    (word)))

===============================================================================
Macros (%global positive integer)
===============================================================================

%global foo 1

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (macro_builtin)
    (identifier)
    (integer)))

===============================================================================
Macros (%global negative integer)
===============================================================================

%global foo -1

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (macro_builtin)
    (identifier)
    (integer)))

===============================================================================
Macros (%global hex)
===============================================================================

%global foo 0x20

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (macro_builtin)
    (identifier)
    (integer)))

===============================================================================
Macros (%global function with empty arguments)
===============================================================================

%global foo() bar

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (macro_builtin)
    (identifier)
    (word)))

===============================================================================
Macros (%global with quoted string)
===============================================================================

%global foo "bar"

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (macro_builtin)
    (identifier)
    (quoted_string
      (quoted_string_content))))

===============================================================================
Macros (%undefine)
===============================================================================

%undefine foo

-------------------------------------------------------------------------------

(spec
  (macro_undefinition
    (macro_builtin)
    (identifier)))

===============================================================================
Macros (Usage/No Braces)
===============================================================================

%getncpus

-------------------------------------------------------------------------------

(spec
  (macro_call
    (macro_simple_expansion
      (macro_builtin))))

===============================================================================
Macros (Usage/Braces)
===============================================================================

%{getncpus}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (macro_builtin)))

===============================================================================
Macros (Shell Expansion)
:skip
===============================================================================

%(echo "wurst")

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion
    (string
      (string_content))
    (quoted_string
      (string_content))))

===============================================================================
Macros (Empty Shell Expansion)
:skip
===============================================================================

%()

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion))

===============================================================================
Macros (Expansion with argument)
===============================================================================

# Expansion
%bcond_without foo

# Just some comment

-------------------------------------------------------------------------------

(spec
  (comment)
  (macro_call
    (macro_simple_expansion
      (identifier))
    (word))
  (comment))

===============================================================================
Macros (Expansion with multiple arguments)
===============================================================================

# Expansion
%bcond foo 1

# Just some comment

-------------------------------------------------------------------------------

(spec
  (comment)
  (macro_call
    (macro_simple_expansion
      (identifier))
    (word)
    (integer))
  (comment))

===============================================================================
Macros (Conditional macro defintion #1)
===============================================================================

%{!?_make_verbose:%define _make_verbose V=1 VERBOSE=1}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (conditional_expansion
      (identifier)
      (macro_definition
        (macro_builtin)
        (identifier)
        (word)
        (word)))))

===============================================================================
Macros (Conditional macro definition #2)
===============================================================================

%{!?gopath: %global gopath %{_datadir}/gocode}

# Comment

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (conditional_expansion
      (identifier)
      (macro_definition
        (macro_builtin)
        (identifier)
        (macro_expansion
          (identifier))
        (word))))
  (comment))

===============================================================================
Macros (Complex arguments with quotes)
:skip
===============================================================================

%setup -q -n "package name with spaces"
%patch0 -p1 --fuzz=0 --backup="file.bak"

-------------------------------------------------------------------------------

===============================================================================
Macros (Arguments with escaping)
:skip
===============================================================================

%configure --enable-feature="value with \"quotes\""
%make_build CFLAGS="-DVERSION=\"%{version}\""

-------------------------------------------------------------------------------

===============================================================================
Macros (Nested macro arguments)
:skip
===============================================================================

%{expand: %{configure %{configure_args}}}
%{lua: some_function("%{name}", %{version})}

-------------------------------------------------------------------------------
